-Set minimal size,maximal size,and anchor property for all forms -New width for columns in datagridview(Watchlist Form) -Fixed filter by title to work properly when leaving it empty -Added button to send movie with informations(Title,Genre,Actors,Plot,IMDb Rating,Metascore) from grid to friend's WhatsApp

--- a/MoviesFromImdb/MoviesFromImdb.csproj
+++ b/MoviesFromImdb/MoviesFromImdb.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="IMDB_Logo_2016.png" />
+    <Content Include="WhatsApp-logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
