--- a/MoviesFromImdb/MoviesFromImdb.csproj
+++ b/MoviesFromImdb/MoviesFromImdb.csproj
@@ -37,6 +37,7 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
