--- a/MoviesFromImdb/packages.config
+++ b/MoviesFromImdb/packages.config
@@ -3,4 +3,5 @@
   <package id="ExcelDataReader" version="3.4.2" targetFramework="net461" />
   <package id="ExcelDataReader.DataSet" version="3.4.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="YoutubeSearch.dll" version="1.1" targetFramework="net461" />
 </packages>
