-Minor visual changes -Code refactoring -Change the way of filtering movie titles and added option for suggesting movies while typing (autocomplete) from watchlist grid -Change the way of printing movies from watchlist(with option to export to pdf)

--- a/MoviesFromImdb/MoviesFromImdb.csproj
+++ b/MoviesFromImdb/MoviesFromImdb.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL.cs" />
+    <Compile Include="DGVPrinter.cs" />
     <Compile Include="EmailForm.cs">
       <SubType>Form</SubType>
     </Compile>
